@@ -3,12 +3,12 @@ abstract: 'Automated REST Method Dispatching'
 author:
   - 'Adam Jacob <adam@stalecoffee.org>, with lots of help from mst and jrockway'
 build_requires:
-  ExtUtils::MakeMaker: 6.6302
+  ExtUtils::MakeMaker: 6.59
 configure_requires:
-  ExtUtils::MakeMaker: 6.6302
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+generated_by: 'Module::Install version 1.05'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -43,5 +43,5 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Action-REST.git
-version: 0.98
+version: 0.99
 x_authority: cpan:BOBTFISH
